test/good/generics/basic11.px

func f<T>(T x, T y) def
    print x, y

f(-10^^17, 1.0f)
f("ab", 'c')
