test/bad/generics/print02.px

func f<T>(T x) def
    print 'x', x

f(ord)
